--- a/CSS/biostyle.css
+++ b/CSS/biostyle.css
@@ -8,8 +8,8 @@ h3	{
 	color:gray;
 }
 img	{
-	border:250;
-	width:50;
-	border-style:72;
+	border:600 px;
+	width:50 %;
+	border-style:dashed;
 	border-color:#0068FF;
 }
