--- a/CSS/top10style1.css
+++ b/CSS/top10style1.css
@@ -3,9 +3,9 @@ p	{
 }
 h1	{
 	color:red;
-	
-
-
+	border:5px black solid;
+	padding:10px;
+	margin:30px;
 }
 img	{
 	width:200px;
@@ -19,5 +19,13 @@ body {
 .opening {
 	color:white;
 	font-family: sans-serif;
-	font-size: 50px
+	text-align:center;
 }
+.wrapper	{
+	width:80%;
+	margin:0 auto;
+	background-color:blue;
+}
+
+footer {
+	text-align: center;
