--- a/CSS/biostyle.css
+++ b/CSS/biostyle.css
@@ -45,6 +45,18 @@
 	background-color:orange;
 }
 
+.wrapper2	{
+	width: 80%;
+	background-color: orange;
+	margin: 0 auto;
+	padding-bottom: 20px;
+	padding-top: 15px;
+}
+
+nav{
+	text-align: center;
+}
+
 footer{
 	text-align: center;
 }
@@ -68,4 +80,14 @@ h1	{
 
 h2	{
 	text-align: center;
+}
+
+a {
+	border: black 2px solid;
+	padding: 10px;
+	margin:10px;
+	background-color: white;
+	display: inline;
+	text-align: center;
+	font-size: 20px;
 }
