--- a/CSS/quiz1.css
+++ b/CSS/quiz1.css
@@ -38,3 +38,24 @@ p	{
 .two	{
 	text-align: center
 }
+
+.wrapper2	{
+	width: 80%;
+	margin: 0 auto;
+	padding-bottom: 20px;
+	padding-top: 15px;
+}
+
+a {
+	border: black 2px solid;
+	padding: 10px;
+	margin:10px;
+	background-color: white;
+	display: inline;
+	text-align: center;
+	font-size: 20px;
+}
+
+nav	{
+	text-align: center;
+}
