--- a/CSS/top10style.css
+++ b/CSS/top10style.css
@@ -21,3 +21,25 @@ body {
 	font-family: sans-serif;
 	font-size: 50px
 }
+
+.wrapper2	{
+	width: 80%;
+	background-color: orange;
+	margin: 0 auto;
+	padding-bottom: 20px;
+	padding-top: 15px;
+}
+
+nav{
+	text-align: center;
+}
+
+a {
+	border: black 2px solid;
+	padding: 10px;
+	margin:10px;
+	background-color: white;
+	display: inline;
+	text-align: center;
+	font-size: 20px;
+}
