--- a/CSS/quiz1.css
+++ b/CSS/quiz1.css
@@ -3,12 +3,12 @@ h1	{
 	border-width:4px;
 	border-color:white;
 	color:white;
-	text-align: center
+	text-align: center;
 }
 h2	{
 	font-size: 32px
 	color:white;
-	text-align: center
+	text-align: center;
 }
 h3	{
 	font-size:28px
@@ -20,23 +20,23 @@ ul	{
 }
 ol	{
 	color:red;
-	font-size:26px 
+	font-size:26px;
 }
 
 body {
-	background-color:#0B424D
+	background-color:#0B424D;
 	
 }
 p	{
 	color:white;
-	font-size: 22px
+	font-size: 22px;
 }
 .one	{
 	border-width:4px;
 	border-color:black;
 }
 .two	{
-	text-align: center
+	text-align: center;
 }
 
 .wrapper2	{
