--- a/CSS/biostyle.css
+++ b/CSS/biostyle.css
@@ -91,3 +91,19 @@ a {
 	text-align: center;
 	font-size: 20px;
 }
+
+a:link	{
+	color:white;
+}
+
+a:hover	{
+	color:#FF09E5;
+}
+
+a:visited	{
+	color: black;
+}
+
+a:active	{
+	color:#50FF09;
+}
