--- a/CSS/indexstyle.css
+++ b/CSS/indexstyle.css
@@ -31,3 +31,19 @@ footer	{
 body{
 	background-color: blue;
 }
+
+a:link	{
+	color:white;
+}
+
+a:hover	{
+	color:#FF09E5;
+}
+
+a:visited	{
+	color: black;
+}
+
+a:active	{
+	color:#50FF09;
+}
