--- a/CSS/quiz1.css
+++ b/CSS/quiz1.css
@@ -59,3 +59,19 @@ a {
 nav	{
 	text-align: center;
 }
+
+a:link	{
+	color:white;
+}
+
+a:hover	{
+	color:#FF09E5;
+}
+
+a:visited	{
+	color: black;
+}
+
+a:active	{
+	color:#50FF09;
+}
