--- a/CSS/stevieray.css
+++ b/CSS/stevieray.css
@@ -28,7 +28,7 @@ p {
 }
 
 img {
-	border: 5px black solid;
+	border: 5px white solid;
 	margin: 10px;
 	width:400px;
 }
@@ -110,3 +110,18 @@ nav{
 	text-align: center;
 }
 
+a:link	{
+	color:white;
+}
+
+a:hover	{
+	color:#FF09E5;
+}
+
+a:visited	{
+	color: black;
+}
+
+a:active	{
+	color:#50FF09;
+}
