--- a/CSS/biostyle.css
+++ b/CSS/biostyle.css
@@ -86,14 +86,14 @@ a {
 	border: black 2px solid;
 	padding: 10px;
 	margin:10px;
-	background-color: white;
+	background-color:red;
 	display: inline;
 	text-align: center;
 	font-size: 20px;
 }
 
 a:link	{
-	color:white;
+	color:black;
 }
 
 a:hover	{
