--- a/CSS/top10style.css
+++ b/CSS/top10style.css
@@ -38,8 +38,24 @@ a {
 	border: black 2px solid;
 	padding: 10px;
 	margin:10px;
-	background-color: white;
+	background-color: red;
 	display: inline;
 	text-align: center;
 	font-size: 20px;
+}
+
+a:link	{
+	color:black;
+}
+
+a:hover	{
+	color:#FF09E5;
+}
+
+a:visited	{
+	color: black;
+}
+
+a:active	{
+	color:#50FF09;
 }
